<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_edit_24"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/itemDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="4dp"
                android:text="@string/date"
                android:textColor="?android:textColorSecondary"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/timeOfDayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="22sp"
                android:text="@string/timeOfDay"/>
        </LinearLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/sysTitleText"
                android:text="@string/systolic"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_column="0"
                android:layout_row="0"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/sysText"
                android:text="@string/measure"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_column="0"
                android:layout_row="1"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/diaTitleText"
                android:text="@string/diastolic"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/diaText"
                android:text="@string/measure"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/pulseTitleText"
                android:text="@string/pulse"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_column="2"
                android:layout_row="0"
                android:layout_gravity="center"/>


            <TextView
                android:id="@+id/pulseText"
                android:text="@string/measure"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_column="2"
                android:layout_row="1"
                android:layout_gravity="center"/>

        </GridLayout>



    </RelativeLayout>
</androidx.cardview.widget.CardView>